--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,20 @@
-input[type=text] {
-    /* width: 100%;
+/* 
+    input[type=text] {
+    width: 100%;
     padding: 15px 22px;
     margin: 10px 5px;
     box-sizing: border-box;  
     border: 4px solid #8842d5;
     border-radius: 5px;  
     border: none;
-    border-bottom: 4px solid #8842d5;   */
-
-    /* background-color: #8842d5;
+    border-bottom: 4px solid #8842d5;
+    background-color: #8842d5;
     color: white;  
     background-color: #9476f7;
     background-position: 9px 10px;
     background-repeat: no-repeat;
-    padding-left: 50px;   */
-}
+    padding-left: 50px;} 
+*/
 textarea {
     width: 80%;
     height: 200px;
